--- a/typeidea/typeidea/templates/default/config/sidebar_comments.html
+++ b/typeidea/typeidea/templates/default/config/sidebar_comments.html
@@ -8,7 +8,7 @@
     <ul>
         {% for comment in comments %}
         <li>
-            <a href="/post/{{ comment.target_id }}.html">{{ comment.target_title }}</a>
+            <a href="{% url 'post-detail' comment.target_id %}">{{ comment.target_title }}</a>
         </li>
         {% endfor %}
     </ul>
