完善博客系统，添加评论和访问统计等

--- a/typeidea/typeidea/templates/bootstrap/blog/base.html
+++ b/typeidea/typeidea/templates/bootstrap/blog/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+<!--{% load static %}-->
 <!DOCTYPE html>
 <html lang='en'>
 <head>
@@ -12,6 +12,10 @@
 			margin-bottom: 5px;
 		}
 	</style>
+
+	{% block highlight %}
+	{% endblock %}
+
 </head>
 <body>
 	<div class="container head">
