--- a/typeidea/typeidea/templates/bootstrap/blog/detail.html
+++ b/typeidea/typeidea/templates/bootstrap/blog/detail.html
@@ -1,7 +1,15 @@
 {% extends "./base.html" %}
+{% load comment_block %}
 
 {% block title %}
     {{ post.title }}
+{% endblock %}
+
+<!--代码高亮-->
+{% block highlight %}
+    <link rel = "stylesheet" href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/googlecode.min.css">
+    <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 {% endblock %}
 
 {% block main %}
@@ -13,7 +21,12 @@
     </div>
     <hr/>
     <p>
-        {{ post.content }}
+        {% autoescape off %}
+        {{ post.content_html }}
+        {% endautoescape %}
     </p>
     {% endif %}
+
+{% comment_block request.path %}
+
 {% endblock %}
