--- a/typeidea/typeidea/templates/bootstrap/config/sidebar_comments.html
+++ b/typeidea/typeidea/templates/bootstrap/config/sidebar_comments.html
@@ -8,7 +8,8 @@
     <ul>
         {% for comment in comments %}
         <li>
-            <a href="{% url 'post-detail' comment.target_id %}">{{ comment.target_title }}</a>
+            <a href="{{ comment.target }}">{{ comment.target.title }}</a>
+            {{ comment.nickname }}:{{ comment.content }}
         </li>
         {% endfor %}
     </ul>
